--- a/jsurfer-jackson-jr/pom.xml
+++ b/jsurfer-jackson-jr/pom.xml
@@ -48,6 +48,7 @@
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.1.2184</version>
             </plugin>
         </plugins>
     </build>
