--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -41,7 +41,7 @@ jobs:
           mvn deploy -B -Prelease -DskipTests
           mvn versions:set -B -DgenerateBackupPoms=false -DnewVersion=${{ github.event.inputs.next-snapshot-version }}
           git commit -am "Next version is ${{ github.event.inputs.next-snapshot-version }}"
-          git push origin v${{ github.event.inputs.release-version }} main
+          git push origin v${{ github.event.inputs.release-version }} master
         env:
           MAVEN_USERNAME: ${{ secrets.SONATYPE_OSS_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.SONATYPE_OSS_PASSWORD }}
