--- a/jsurfer-core/pom.xml
+++ b/jsurfer-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>jsurfer</artifactId>
         <groupId>com.hazelcast.jsurfer</groupId>
-        <version>0.11</version>
+        <version>0.12-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
