--- a/.github/workflows/pr-builder.yml
+++ b/.github/workflows/pr-builder.yml
@@ -11,12 +11,13 @@ jobs:
     if: github.repository_owner == 'hazelcast'
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up Apache Maven Central
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: 8
           distribution: 'adopt'
+          cache: 'maven'
 
       - name: Build
         run: |
