Update ANTLR version to 4.13.1 and Java to 17 (#88)
---------

Co-authored-by: Josef Cacek <josef.cacek@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@
                                 <configuration>
                                     <rules>
                                         <requireJavaVersion>
-                                            <version>[1.8,1.9)</version>
+                                            <version>17</version>
                                         </requireJavaVersion>
                                     </rules>
                                 </configuration>
@@ -168,8 +168,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.plugin.version}</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>17</release>
                 </configuration>
             </plugin>
             <plugin>
