--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Set up Java and credentials
         uses: actions/setup-java@v3
         with:
-          java-version: 8
-          distribution: 'adopt'
+          java-version: 17
+          distribution: 'temurin'
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
