--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -19,13 +19,15 @@ jobs:
   do-release:
     runs-on: ubuntu-latest
     steps:
+      - name: Read Java Config
+        run: cat ${{ github.workspace }}/hazelcast/.github/java-config.env >> $GITHUB_ENV
       - name: Checkout
         uses: actions/checkout@v3
       - name: Set up Java and credentials
         uses: actions/setup-java@v3
         with:
-          java-version: 17
-          distribution: 'temurin'
+          java-version: ${{ env.JAVA_VERSION }}
+          distribution: ${{ env.JAVA_DISTRIBUTION }}
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
