--- a/.github/workflows/pr-builder.yml
+++ b/.github/workflows/pr-builder.yml
@@ -11,12 +11,14 @@ jobs:
     if: github.repository_owner == 'hazelcast'
 
     steps:
+      - name: Read Java Config
+        run: cat ${{ github.workspace }}/hazelcast/.github/java-config.env >> $GITHUB_ENV
       - uses: actions/checkout@v3
       - name: Set up Apache Maven Central
         uses: actions/setup-java@v3
         with:
-          java-version: 17
-          distribution: 'temurin'
+          java-version: ${{ env.JAVA_VERSION }}
+          distribution: ${{ env.JAVA_DISTRIBUTION }}
           cache: 'maven'
 
       - name: Build
