--- a/.github/workflows/push-snapshots.yaml
+++ b/.github/workflows/push-snapshots.yaml
@@ -14,12 +14,15 @@ jobs:
     if: github.repository_owner == 'hazelcast'
 
     steps:
+      - name: Read Java Config
+        run: cat ${{ github.workspace }}/hazelcast/.github/java-config.env >> $GITHUB_ENV
+
       - uses: actions/checkout@v3
       - name: Set up Apache Maven Central
         uses: actions/setup-java@v3
         with:
-          java-version: 17
-          distribution: 'temurin'
+          java-version: ${{ env.JAVA_VERSION }}
+          distribution: ${{ env.JAVA_DISTRIBUTION }}
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
