--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Read Java Config
-        run: cat ${{ github.workspace }}/hazelcast/.github/java-config.env >> $GITHUB_ENV
+        run: cat ${{ github.workspace }}/.github/java-config.env >> $GITHUB_ENV
       - name: Checkout
         uses: actions/checkout@v3
       - name: Set up Java and credentials
