Use JDK 17 and Temurin distro, like in core Hz (#89)

--- a/.github/workflows/pr-builder.yml
+++ b/.github/workflows/pr-builder.yml
@@ -12,11 +12,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Read Java Config
+        run: cat ${{ github.workspace }}/.github/java-config.env >> $GITHUB_ENV
       - name: Set up Apache Maven Central
         uses: actions/setup-java@v3
         with:
-          java-version: 17
-          distribution: 'adopt'
+          java-version: ${{ env.JAVA_VERSION }}
+          distribution: ${{ env.JAVA_DISTRIBUTION }}
           cache: 'maven'
 
       - name: Build
