add <name> to modules

--- a/jsurfer-core/pom.xml
+++ b/jsurfer-core/pom.xml
@@ -10,6 +10,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <name>jsurfer-core</name>
     <artifactId>jsurfer-core</artifactId>
 
     <properties>
