--- a/jsurfer-fastjson/pom.xml
+++ b/jsurfer-fastjson/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <name>jsurfer-fastjson</name>
     <artifactId>jsurfer-fastjson</artifactId>
 
     <profiles>
