--- a/jsurfer-jsonsimple/pom.xml
+++ b/jsurfer-jsonsimple/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <name>jsurfer-jsonsimple</name>
     <artifactId>jsurfer-jsonsimple</artifactId>
 
     <profiles>
